--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     /* Welcome Section (Landing Page) */
     #welcome {
       height: 100vh;
-      background: linear-gradient(to bottom, #80e27e, #388e3c); /* Greenish Gradient */
+      background: linear-gradient(to bottom, #0072bb, #00b140); /* Greenish Gradient */
       display: flex;
       justify-content: center;
       align-items: center;
@@ -126,7 +126,7 @@
 
     /*responsiveness*/
     /* Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 1028px) {
   #welcome h1 {
     font-size: 2em;
   }
@@ -190,7 +190,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 915px) {
   #welcome h1 {
     font-size: 1.5em;
   }
@@ -236,13 +236,13 @@
   <!-- Welcome Section -->
   <div id="welcome">
     <img src="AGEL.png" alt="Solar Company Logo" class="logo">
-    <h1>Powering the Future with Solar Energy</h1>
+    <h1>PV Form A Solar Assest's and Data Management System</h1>
     <button onclick="scrollToSection('about')">Explore</button>
   </div>
 
   <!-- About Section -->
 <!-- About Section -->
-<div id="about" style="background: url('https://via.placeholder.com/1600x900.png?text=Solar+Energy+Background') center/cover; padding: 80px 20px; color: #fff;">
+<div id="about" style="background: url('solar.jpg') center/cover; padding: 80px 20px; color: #fff;">
     <div style="text-align: center;">
       <h2 style="font-size: 3em; color: #ffffff; font-weight: bold; margin-bottom: 20px;">About Solar Energy</h2>
       <p style="max-width: 900px; margin: 0 auto; font-size: 1.5em; line-height: 1.6; color: #fff; opacity: 0.9;">
@@ -342,15 +342,15 @@
         <h3 style="font-size: 2em; color: #388e3c; margin-bottom: 20px; text-align: center;">Contact Info</h3>
         <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 20px;">
           <img src="https://via.placeholder.com/30" alt="Phone Icon" style="width: 30px; height: 30px;">
-          <p style="font-size: 1.2em; color: #333;">+1 (555) 123-4567</p>
+          <p style="font-size: 1.2em; color: #333;">Developer Saiyed Rahil (SDE Intern @ ENOC)</p>
         </div>
         <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 20px;">
           <img src="https://via.placeholder.com/30" alt="Email Icon" style="width: 30px; height: 30px;">
-          <p style="font-size: 1.2em; color: #333;">info@solarenergy.com</p>
+          <p style="font-size: 1.2em; color: #333;">Mentor: Tushar Lad (Manager @ ENOC)</p>
         </div>
         <div style="display: flex; align-items: center; gap: 15px;">
           <img src="https://via.placeholder.com/30" alt="Location Icon" style="width: 30px; height: 30px;">
-          <p style="font-size: 1.2em; color: #333;">123 Solar St, Green City, EcoLand</p>
+          <p style="font-size: 1.2em; color: #333;">For Credentials Conatact Tushar Kumar Lad</p>
         </div>
       </div>
   
